--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+/* Filename: styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300'); 
 
 body {
   height: 100%;
   width: 100%;
   background-color: #F3F6F9;
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 20px;
   margin: 0;
   overflow: hidden;
